style apropos section for mobile

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=Permanent+MarkerExo|Russo+One" rel="stylesheet"> 
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
@@ -64,13 +64,24 @@
         </header>
                   <!-- Star about Me section -->
        
-    <section class="row text-center" id="intro">
-        <article class="col-12 col-sm-12 col-lg-12">
-             <p class="titre1 mt-0">Développeuse web junior</p>
+    <section class="row text-center " id="intro">
+        <article class="col-12 col-sm-12 col-lg-12 pt-5 mt-5">
+             <p class="titre1 mt-5">Développeuse web junior</p>
         </article>     
         <article class="apropos col-12 col-sm-12 col-lg-12">
          <p>Mon objectif est devenir développeur web confirmé. J' ai envie de travailler dans le domaine de web</p>
-
+          <div class="row  icones">
+              <div class="col-3 offset-3  mr-0 col-sm-3 col-lg-3">
+                 <div class="icone text-center">
+                   <i class="fa fa-twitter" style="font-size:36px"></i>
+                  </div> 
+              </div>
+              <div class="col-3  offset-2 col-sm-3 ml-0 col-lg-3">
+               <div class="icone">
+                <i class="fa fa-linkedin" style="font-size:20px; color:red"></i>
+                </div>
+              </div>
+          </div>
         </article>
         
     </section> 
