style footer  section

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                    <div class="projet-description-contenu">
                        <p class="titre-1">OUAJA</p>
                        <hr class="sous-titre">
-                       <p>Reproduction Quiver(projet en groupe)  for simplon-2017</p>
+                       <p>Reproduction Quiver  for simplon-2017</p>
                     </div>
                   </div>  
               </figure>    
