--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-item nav-link " href="#portfolio">Mes réalisations</a>
                         <a class="nav-item nav-link" href="#competence">Mes compétences</a>
                         <a class="nav-item nav-link" href="#contact">Contact</a>
-                        <a class="nav-item nav-link" href="doc/CV_sahbia_ouja.pdf">CV</a>
+                        <a class="nav-item nav-link" href="doc/CV_sahbia_ouaja.pdf">CV</a>
                         
                       </div>
                     </div>
