--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width device-width, initial-scale=1">
 
@@ -53,6 +53,7 @@
     <section class="d-flex  flex-column justify-content-center   align-items-center" id="intro">
         
             <p class="mt-5 titre1">OUAJA SAHBIA</p>
+             <img src="img/maphotos2.jpg" class="img-fluid  photos" alt="maphotos">
             <p class="titre2 mt-2">Développeuse web junior </p>
             <p class="titre2">Front-end/ back-end </p>
 
