--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
    <div class="row pt-5 pb-5">
           <h2 class="text-center col-12 titlesection">Mes réalisations</h2>
         <div class="mt-5 projets col-12"> 
-                  <h2 class="realise-titre text-center mb-5">Projects avec PHP</h2>
+                  <h2 class="realise-titre text-center mb-5">Projets avec PHP</h2>
           <article class="reproduction row">
            <a  class="col-12 col-md-6 col-xl-3" href="https://github.com/bettoumi/bookCatalog">
               <figure class="proj " id="proj1">
@@ -130,7 +130,7 @@
 
        
        <!-- project witdh javascript et jquery -->
-        <h2 class="realise-titre text-center mt-5 mb-5">Projects avec JavaScript</h2>
+        <h2 class="realise-titre text-center mt-5 mb-5">Projets avec JavaScript</h2>
         <article class="creation mt-3 mb-3 row">
         <a href="https://github.com/bettoumi/slide" class="col-12 col-md-6 col-xl-3">
             <figure class="proj">
@@ -192,7 +192,7 @@
               </a>
             
           </article>
-                     <h2 class="realise-titre text-center mt-5 mb-5">Projects avec HTML/CSS </h2>
+                     <h2 class="realise-titre text-center mt-5 mb-5">Projets avec HTML/CSS </h2>
           <article class="reproduction row">
            <a  class="col-12 col-md-6 col-xl-3" href="https://github.com/bettoumi/coachsportif">
               <figure class="proj " id="proj1">
